--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="skill-row">
                 <img class="chilli" src="chillies.png" alt="">
                 <h3>Lorem Ipsum Dolor</h3>
-                <p>My keen interest is in technical club. Actually i am the undiputed kings of hot chilly challenge.</p>
+                <p>My keen interest is in technical club. Actually i am the undisputed kings of hot chilly challenge.</p>
             </div>
         </div>
 
